# rdi-installer

./: .gitignore  README.md  TODO  meson.build
.github/workflows/: ci-opensuse.yml
images/: mkosi.conf  mkosi.finalize  mkosi.postinst  mkosi.postoutput
images/mkosi.extra/usr/lib/rpm/gnupg/keys/: home_kukuk_mkosi-images_key.asc
images/mkosi.extra/usr/lib/systemd/network/: 89-ethernet.network
images/mkosi.extra/usr/lib/systemd/system-preset/: 60-raw-image-installer.preset
images/mkosi.extra/usr/lib/systemd/system/getty@tty1.service.d/: 90-rdi-installer.conf
images/mkosi.generic/: mkosi.finalize
images/mkosi.generic/mkosi.extra/usr/lib/systemd/system-preset/: 60-raw-image-installer.preset
images/mkosi.images/bootloader/: mkosi.conf
images/mkosi.images/bootloader/mkosi.conf.d/: 10-always.conf  20-default-content.conf  30-x86_64.conf
images/mkosi.images/rdii/: mkosi.conf  mkosi.postinst  mkosi.postoutput
images/mkosi.images/rdii/mkosi.extra/usr/lib/systemd/system-preset/: 60-raw-image-installer.preset
images/mkosi.images/usbstick/: mkosi.conf  mkosi.finalize  mkosi.postoutput
images/scripts/: add_extra_partition.sh  create_uefi_usbstick.sh
include/: basics.h  devices.h  efivars.h  exec_cmd.h  logger.h  rm_rf.h  zap_partition_table.h
lib/: devices.c  download.c  efivars.c  exec_cmd.c  logger.c  rm_rf.c  tmpfile-util.c  zap_partition_table.c
man/: ifcfg-networkd.8.xml  keywait.1.xml  meson.build  rdii-config.7.xml  rdii-networkd.8.xml  rdii-ssh-setup.service.8.xml
scripts/: keymap.sh  rdi-installer.sh.in  rdii-ssh-setup.sh  select_image.sh  system_info.sh  target_device.sh
src/: download.c  download.h  efivars.c  efivars.h  ifcfg-networkd.c  ifcfg.c  ifcfg.h  ip.c  ip.h  keywait.c  rdi-installer.c  rdii-fetch-config.c  rdii-helper-disk.c  rdii-helper.c  rdii-helper.h  rdii-menu-disk.c  rdii-menu-image.c  rdii-menu-installation.c  rdii-menu-keymap.c  rdii-menu-sysinfo.c  rdii-menu.c  rdii-menu.h  rdii-networkd.c  rdii-networkd.h
tests/: meson.build  tst-config-networkd-1.rdii-config  tst-config-networkd-1.sh  tst-ifcfg-networkd-1.sh  tst-ifcfg-networkd-2.sh  tst-ip-networkd-1.config  tst-ip-networkd-1.sh  tst-ip-networkd-10.sh  tst-ip-networkd-11.sh  tst-ip-networkd-12.sh  tst-ip-networkd-13.sh  tst-ip-networkd-14.sh  tst-ip-networkd-15.sh  tst-ip-networkd-16.sh  tst-ip-networkd-2.sh  tst-ip-networkd-3.sh  tst-ip-networkd-4.sh  tst-ip-networkd-5.sh  tst-ip-networkd-6.sh  tst-ip-networkd-7.sh  tst-ip-networkd-8.sh  tst-ip-networkd-9.sh  tst-multiple-networkd-1.sh  tst-multiple-networkd-2.sh  tst-nameserver-networkd-1.sh  tst-peerdns-networkd-1.sh  tst-peerdns-networkd-2.sh  tst-route-networkd-1.sh  tst-route-networkd-2.sh  tst-route-networkd-3.sh  tst-route-networkd-4.sh  tst-vlan-networkd-1.sh
tests/tst-config-networkd-1/: 62-rdii-vlan98.netdev  66-ip-01.network  66-ip-02.network  66-ip-03.network
tests/tst-ifcfg-networkd-1/: 60-ifcfg-01.network  60-ifcfg-02.network  60-ifcfg-03.network  66-ifcfg-dev-01.network  66-ifcfg-dev-02.network
tests/tst-ifcfg-networkd-2/: 62-ifcfg-vlan0033.netdev  62-ifcfg-vlan0066.netdev  62-ifcfg-vlan0067.netdev  64-ifcfg-vlan-eth0.network  64-ifcfg-vlan-eth1.network  66-ifcfg-dev-01.network  66-ifcfg-dev-02.network  66-ifcfg-dev-03.network
tests/tst-ip-networkd-01/: 66-ip-01.network
tests/tst-ip-networkd-03/: 66-ip-01.network
tests/tst-ip-networkd-04/: 66-ip-01.network
tests/tst-ip-networkd-08/: 66-ip-01.network
tests/tst-ip-networkd-09/: 66-ip-01.network
tests/tst-ip-networkd-1/: 66-ip-07.network  66-ip-08.network  66-ip-09.network  66-ip-12.network  66-ip-13.network  66-ip-14.network
tests/tst-ip-networkd-13/: 66-ip-01.network
tests/tst-ip-networkd-14/: 66-ip-01.network
tests/tst-ip-networkd-15/: 66-ip-01.network
tests/tst-ip-networkd-16/: 66-ip-01.network
tests/tst-multiple-networkd-1/: 66-ip-01.network
tests/tst-multiple-networkd-2/: 66-ip-01.network
tests/tst-nameserver-networkd-1/: 66-ip-01.network
tests/tst-peerdns-networkd-1/: 66-ip-01.network
tests/tst-peerdns-networkd-2/: 66-ip-01.network
tests/tst-route-networkd-1/: 66-ip-01.network
tests/tst-route-networkd-2/: 66-ip-01.network
tests/tst-route-networkd-3/: 66-ip-01.network
tests/tst-route-networkd-4/: 66-ip-01.network
tests/tst-vlan-networkd-1/: 62-rdii-vlan0098.netdev  62-rdii-vlan0099.netdev  62-rdii-vlan99.netdev  66-ip-01.network
units/: ifcfg-networkd.service  meson.build  rdii-fetch-config-early.service  rdii-fetch-config.service  rdii-networkd.service  rdii-set-default-loader-entry.service  rdii-ssh-setup.service
